grammar.js
    source_file: $ => repeat(seq(
      choice(
        $.set_operation,
        $.select_statement,
        $.create_table_statement,
        $.create_view_statement,
        $.create_function_statement,
        $.drop_table_statement,
        $.drop_view_statement,
        $.insert_statement,
        $.update_statement,
        $.delete_statement,
        $.merge_statement,
        $.declare_statement,
        $.set_statement,
        $.begin_end_block
      ),
      optional(';')
    )),

    select_statement: $ => seq(
      optional($.with_clause),
      $.select_clause,
      optional($.from_clause),
      optional($.where_clause),
      optional($.group_by_clause),
      optional($.having_clause),
      optional($.qualify_clause),
      optional($.window_clause),
      optional($.order_by_clause),
      optional($.limit_clause),
      optional($.offset_clause)
    ),

    select_clause: $ => seq(
      kw('SELECT'),
      optional(choice(kw('DISTINCT'), kw('ALL'))),
      prec.right(
        seq(
          $.select_item,
          repeat(seq(',', $.select_item)),
          optional(',') // Allow trailing comma
        )
      )
    ),

    select_item: $ => prec.right(0, choice(
      $.alias,
      $.star,
      $._expression
    )),

    from_clause: $ => seq(
      kw('FROM'),
      $._table_expression
    ),

    _table_expression: $ => choice(
      $.join_expression,
      $.table_alias,
      $.subquery,
      $.unnest_expression,
      $.pivot_expression,
      $.unpivot_expression,
      $.qualified_table_name,
      $.backtick_identifier,
      $.identifier
    ),

    // Stage 2: WHERE clause and expressions
    where_clause: $ => seq(
      kw('WHERE'),
      $._expression
    ),

    _expression: $ => optionalParenthesis(choice(
      $.binary_expression,
      $.unary_expression,
      $.in_expression,
      $.exists_expression,
      $.between_expression,
      $.is_null_expression,
      $.case_expression,
      $.cast_expression,
      $.window_function,
      $.function_call,
      $.array_access,
      $.field_access,
      $.subquery,
      $.array_literal,
      $.struct_literal,
      $.interval_literal,
      $.parameter_marker,
      $.system_variable,
      $.backtick_identifier,
      $.identifier,
      $.number_literal,
      $.string_literal,
      $.boolean_literal
    )),

    // Binary expressions with precedence
    // OR has lowest precedence
    binary_expression: $ => choice(
      prec.left(1, seq(
        field('left', $._expression),
        kw('OR'),
        field('right', $._expression)
      )),
      // AND has higher precedence than OR
      prec.left(2, seq(
        field('left', $._expression),
        kw('AND'),
        field('right', $._expression)
      )),
      // Comparison operators and LIKE have higher precedence than AND/OR
      prec.left(3, seq(
        field('left', $._expression),
        choice('=', '!=', '<', '>', '<=', '>=', kw('LIKE')),
        field('right', $._expression)
      )),
      // Addition and subtraction
      prec.left(5, seq(
        field('left', $._expression),
        choice('+', '-'),
        field('right', $._expression)
      )),
      // Multiplication, division, and modulo have highest precedence
      prec.left(6, seq(
        field('left', $._expression),
        choice('*', '/', '%'),
        field('right', $._expression)
      ))
    ),

    // Unary expression (NOT)
    function_call: $ => prec(7, seq(
      field('name', $.identifier),
      '(',
      field('arguments', optional(choice(
        $.star,
        commaSep1($._expression)
      ))),
      ')'
    )),

    order_by_clause: $ => seq(
      kw('ORDER'),
      kw('BY'),
      commaSep1($.order_item)
    ),

    order_item: $ => seq(
      $._expression,
      optional(choice(kw('ASC'), kw('DESC')))
    ),

    limit_clause: $ => seq(
      kw('LIMIT'),
      $.number_literal
    ),

    offset_clause: $ => seq(
      kw('OFFSET'),
      $.number_literal
    ),

    // Set operations (UNION, INTERSECT, EXCEPT)
    set_operation: $ => prec.left(seq(
      optionalParenthesis(choice($.select_statement, $.set_operation)),
      repeat1(
        seq(
          choice(
            seq(kw('UNION'), choice(kw('ALL'), kw('DISTINCT'))),
            seq(kw('UNION'), kw('ALL')),
            kw('UNION'),
            seq(kw('INTERSECT'), kw('DISTINCT')),
            kw('INTERSECT'),
            seq(kw('EXCEPT'), kw('DISTINCT')),
            kw('EXCEPT')
          ),
          optionalParenthesis(choice($.select_statement, $.set_operation)),
        )
      )
    )),

    // Stage 4: JOIN operations
    field_access: $ => prec.left(seq(
      field('object', choice(
        $.identifier,
        $.backtick_identifier,
        $.field_access,
        $.array_access
      )),
      '.',
      field('field', choice(
        $.identifier,
        $.backtick_identifier
      ))
    )),

    // Array element access with brackets
    array_access: $ => prec.left(8, seq(
      field('array', choice(
        $.identifier,
        $.backtick_identifier,
        $.field_access,
        $.array_access
      )),
      '[',
      field('index', choice(
        $._expression,
        $.offset_subscript,
        $.ordinal_subscript
      )),
      ']'
    )),

    offset_subscript: $ => seq(
      kw('OFFSET'),
      '(',
      $._expression,
      ')'
    ),

    ordinal_subscript: $ => seq(
      kw('ORDINAL'),
      '(',
      $._expression,
      ')'
    ),

    // Stage 5: Subqueries and CTEs
    array_literal: $ => seq(
      '[',
      optional(commaSep1($._expression)),
      ']'
    ),

    backtick_identifier: $ => /`[^`]+`/,

    // Stage 7: Window functions
    create_function_statement: $ => seq(
      kw('CREATE'),
      optional(choice(
        seq(kw('OR'), kw('REPLACE')),
        kw('TEMP'),
        kw('TEMPORARY')
      )),
      kw('FUNCTION'),
      field('name', choice(
        $.qualified_table_name,
        $.backtick_identifier,
        $.identifier
      )),
      field('parameters', $.parameter_list),
      kw('RETURNS'),
      field('return_type', $.type),
      kw('AS'),
      '(',
      field('body', $._expression),
      ')'
    ),

    parameter_list: $ => seq(
      '(',
      optional(commaSep1($.parameter)),
      ')'
    ),

    parameter: $ => seq(
      field('name', $.identifier),
      field('type', $.type)
    ),

    type: $ => choice(
      // Simple types
      kw('INT64'),
      kw('FLOAT64'),
      kw('STRING'),
      kw('BOOL'),
      kw('BYTES'),
      kw('DATE'),
      kw('DATETIME'),
      kw('TIME'),
      kw('TIMESTAMP'),
      // Complex types (simplified for now)
      seq(kw('ARRAY'), '<', $.type, '>'),
      seq(kw('STRUCT'), '<', commaSep1($.struct_type_field), '>'),
      // Generic identifier for custom types
      $.identifier
    ),

    insert_statement: $ => seq(
      kw('INSERT'),
      optional(kw('INTO')),
      field('table', choice(
        $.qualified_table_name,
        $.backtick_identifier,
        $.identifier
      )),
      optional($.column_list),
      choice(
        $.values_clause,
        $.select_statement
      )
    ),

    declare_statement: $ => seq(
      kw('DECLARE'),
      field('variable', $.identifier),
      field('type', $.type),
      optional(seq(
        kw('DEFAULT'),
        field('default_value', $._expression)
      ))
    ),

    // SET statement
    set_statement: $ => seq(
      kw('SET'),
      field('variable', $.identifier),
      '=',
      field('value', $._expression)
    ),

    // Control flow: BEGIN...END block
    column_list: $ => seq(
      '(',
      commaSep1($.identifier),
      ')'
    ),

    values_clause: $ => seq(
      kw('VALUES'),
      commaSep1($.value_list)
    ),

    value_list: $ => seq(
      '(',
      commaSep1($._expression),
      ')'
    ),

    star: $ => '*',

    // INTERVAL literals
    interval_literal: $ => seq(
      kw('INTERVAL'),
      choice($.number_literal, $.string_literal),
      field('from', $.date_part),
      optional(seq(
        kw('TO'),
        field('to', $.date_part)
      ))
    ),

    date_part: $ => choice(
      kw('YEAR'),
      kw('MONTH'),
      kw('DAY'),
      kw('HOUR'),
      kw('MINUTE'),
      kw('SECOND'),
      kw('MILLISECOND'),
      kw('MICROSECOND')
    ),

    number_literal: $ => /\d+/,

    string_literal: $ => choice(
      seq("'", /[^']*/, "'"),
      seq('"', /[^"]*/, '"')
    ),

    identifier: $ => /[a-zA-Z_][a-zA-Z0-9_]*/,

    // Parameter marker (@param_name)
    parameter_marker: $ => /@[a-zA-Z_][a-zA-Z0-9_]*/,

    // System variable (@@variable_name)
    system_variable: $ => /@@[a-zA-Z_][a-zA-Z0-9_]*/,
  }
});

// Helper function for case-insensitive keywords
// Using alias to make keywords case-insensitive without regex expansion
function kw(keyword) {
  return alias(new RegExp(keyword, 'i'), keyword.toUpperCase());
}

// Helper function for comma-separated lists (at least one item)
function commaSep1(rule) {
  return seq(rule, repeat(seq(',', rule)));
}

function optionalParenthesis(node) {
  return prec.right(
    choice(
      node,
      wrappedInParenthesis(node),
    ),
  )
}

function wrappedInParenthesis(node) {
  if (node) {
    return seq("(", node, ")");
  }
  return seq("(", ")");
}
