test/corpus/declare.txt
================================================================================
Simple DECLARE with type
================================================================================

DECLARE x INT64;

--------------------------------------------------------------------------------

(source_file
  (declare_statement
    (identifier)
    (type)))

================================================================================
DECLARE with DEFAULT value
================================================================================

DECLARE x INT64 DEFAULT 5;

--------------------------------------------------------------------------------

(source_file
  (declare_statement
    (identifier)
    (type)
    (number_literal)))

================================================================================
DECLARE with string DEFAULT
================================================================================

DECLARE message STRING DEFAULT 'hello';

--------------------------------------------------------------------------------

(source_file
  (declare_statement
    (identifier)
    (type)
    (string_literal)))

================================================================================
DECLARE ARRAY type
================================================================================

DECLARE arr ARRAY<STRING>;

--------------------------------------------------------------------------------

(source_file
  (declare_statement
    (identifier)
    (type
      (type))))

================================================================================
DECLARE with ARRAY literal DEFAULT
================================================================================

DECLARE arr ARRAY<INT64> DEFAULT [1, 2, 3];

--------------------------------------------------------------------------------

(source_file
  (declare_statement
    (identifier)
    (type
      (type))
    (array_literal
      (number_literal)
      (number_literal)
      (number_literal))))

================================================================================
Multiple DECLARE statements
================================================================================

DECLARE x INT64;
DECLARE y STRING DEFAULT 'test';

--------------------------------------------------------------------------------

(source_file
  (declare_statement
    (identifier)
    (type))
  (declare_statement
    (identifier)
    (type)
    (string_literal)))
