test/corpus/set.txt
================================================================================
Simple SET statement
================================================================================

SET x = 5;

--------------------------------------------------------------------------------

(source_file
  (set_statement
    (identifier)
    (number_literal)))

================================================================================
SET with string value
================================================================================

SET message = 'hello';

--------------------------------------------------------------------------------

(source_file
  (set_statement
    (identifier)
    (string_literal)))

================================================================================
SET with expression
================================================================================

SET total = x + y;

--------------------------------------------------------------------------------

(source_file
  (set_statement
    (identifier)
    (binary_expression
      (identifier)
      (identifier))))

================================================================================
SET with function call
================================================================================

SET current_time = CURRENT_TIMESTAMP();

--------------------------------------------------------------------------------

(source_file
  (set_statement
    (identifier)
    (function_call
      (identifier))))

================================================================================
Multiple SET statements
================================================================================

SET x = 1;
SET y = 2;

--------------------------------------------------------------------------------

(source_file
  (set_statement
    (identifier)
    (number_literal))
  (set_statement
    (identifier)
    (number_literal)))

================================================================================
DECLARE and SET together
================================================================================

DECLARE x INT64;
SET x = 10;

--------------------------------------------------------------------------------

(source_file
  (declare_statement
    (identifier)
    (type))
  (set_statement
    (identifier)
    (number_literal)))
